<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/remote_update_bg"
    android:paddingBottom="@dimen/_24sdp"
    android:layoutDirection="ltr"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/connectivity_issue_solution"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_3sdp"/>


    <ScrollView
        android:id="@+id/lin"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <TextView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/android_tv_remote_service_app_in_android_tvs_was_recently_updated_by_google_due_to_this_new_update_the_tv_remote_apps_are_experiencing_issues"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textSize="@dimen/_12sdp"
        android:gravity="start"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/to_resolve_connectivity_issues_on_android_tvs_please_follow_these_steps"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:gravity="start"
        android:text="@string/step"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:gravity="start"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/android_tv_remote_will_start_working_feel_free_to_contact_us"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

        </LinearLayout>

    </ScrollView>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/lin"
        app:layout_constraintLeft_toLeftOf="parent">


        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_20sdp"
            app:buttonTint="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_3sdp"
            android:fontFamily="@font/roboto"
            android:layout_toEndOf="@+id/check"
            android:text="@string/don_t_show_again"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/button_exit"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/app"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>